--- a/src/components/Table/tableStyle.css
+++ b/src/components/Table/tableStyle.css
@@ -4,7 +4,12 @@
     padding: 30px;
 }
 
-.th {
+.tHead {
     display: flex;
     justify-content: space-between;
+    border-bottom: 2px solid grey;
+    padding: 0 0px 30px 0;
+}
+.tBody {
+    padding: 30px 0px 0px 0px;
 }
