--- a/src/components/TableRow/tableRowStyle.css
+++ b/src/components/TableRow/tableRowStyle.css
@@ -1,5 +1,7 @@
 .tableRow {
     display: flex;
     justify-content: space-between;
+    margin: 0px auto;
     padding: 30px 0;
+    /* border: 2px solid rgba(0, 0, 0); */
 }
