--- a/src/components/Table/tableStyle.css
+++ b/src/components/Table/tableStyle.css
@@ -1,17 +1,43 @@
 .table {
     width: 80vw;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     padding: 30px;
 }
-
+.tTitle {
+    position: relative;
+    left: 0px;
+    text-align: start;
+    margin: 30px 0;
+}
 .tHead {
+    /* display: flex;
+    justify-content: space-between; */
+    /* padding: 0 0px 30px 0;  */
     display: flex;
     justify-content: space-between;
+    gap: 220px;
+    margin: 0px auto;
+    padding: 30px 0;
+    padding-bottom: 30px;
     border-bottom: 2px solid grey;
-    padding: 0 0px 30px 0;
+    /* display: grid;
+    grid-template-columns: repeat(5, 250px); */
+}
+.tHead div {
+    min-width: 10px;
+    max-width: 150px;
+    /* border: 2px solid red; */
+    
+}
+.date {
+    margin-left: 40px;
+}
+.author {
+    margin-left: 80px;
 }
 .tBody {
-    padding: 30px 0px 0px 0px;
+    /* padding: 0px 0px 0px 0px; */
+    padding-top: 30px;
 }
 .show {
     /* visibility: visible; */
