--- a/src/components/TableRow/tableRowStyle.css
+++ b/src/components/TableRow/tableRowStyle.css
@@ -1,7 +1,17 @@
 .tableRow {
     display: flex;
     justify-content: space-between;
+    gap: 220px;
     margin: 0px auto;
     padding: 30px 0;
     /* border: 2px solid rgba(0, 0, 0); */
+    /* display: grid;
+    grid-template-columns: repeat(5, 250px); */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr ; */
+}
+
+.statusBtn {
+    background: rgb(163, 161, 161);
+    /* color: rgb(0, 194, 16); */
+    color: #00ff4c;
 }
